syntax = "proto3";
package mailbox_proto;

option go_package = "./proto/mailbox_proto";

import "proto/utils.proto";

service Mailbox {
    rpc Income(IncomeRequest) returns (ResponseMails) {}
    rpc Outcome(OutcomeRequest) returns (ResponseMails) {}
    rpc GetMail(GetMailRequest) returns (ResponseMail) {}
    rpc CountUnread(CountUnreadRequest) returns (ResponseCountUnread) {}
    rpc DeleteMail(DeleteMailRequest) returns (utils.JsonResponse) {}
    rpc ReadMail(ReadMailRequest) returns (utils.JsonResponse) {}
    rpc SendMail(SendMailRequest) returns (utils.JsonExtendResponse) {}
}

message IncomeRequest {
    utils.Session data = 1;
    int32 limit = 2;
    int32 offset = 3;
}

message OutcomeRequest {
    utils.Session data = 1;
    int32 limit = 2;
    int32 offset = 3;
}

message GetMailRequest {
    utils.Session data = 1;
    int32 id = 2;
}

message DeleteMailRequest {
    utils.Session data = 1;
    int32 id = 2;
}

message SendMailRequest {
    utils.Session data = 1;
    bytes form = 2;
}

message ReadMailRequest {
    utils.Session data = 1;
    int32 id = 2;
    bool read = 3;
}

message ResponseMail {
    utils.JsonResponse response = 1;
    bytes mail = 2;
}

message ResponseMails {
    utils.JsonResponse response = 1;
    bytes mails = 2;
}

message CountUnreadRequest {
    utils.Session data = 1;
}

message ResponseCountUnread {
    int32 count = 1;
}